--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ header h2{
 
 h3{ font-family:"karmatic"; color: white;}
 
-body{ background-image: url(./images/background.jpeg);
+body{ background-color: black;
     background-repeat: no-repeat;
     background-size: cover;
     color: white;
@@ -56,7 +56,7 @@ body{ background-image: url(./images/background.jpeg);
 }
 .info1{  
     width:440px;
-    text-align: center;
+    text-align: justify;
 }
 
 .divL{
@@ -88,6 +88,7 @@ flex-wrap: wrap;
 }
 .inscrever:hover {
     background-color: orange;
+    cursor: pointer;
 }
 .inscrever:active{
     background-color: #bd7b00;
@@ -116,6 +117,33 @@ form {
 
     a{ text-decoration: none; color: inherit;}
 
+    footer { height: 40px;}
   
-
-
+.div-prin {
+    width: 100%;
+    display: flex;
+    margin-top:80px;
+    justify-content: center;
+    column-gap: 50px;
+    
+}
+.div-1 {
+    width: 60%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.div-prin img{
+    width: 400px;
+    height: 400px;
+}
+.div-prin h2{
+    font-size: 6vh;
+    font-family: "Karmatic";
+    margin-bottom: 30px;
+}
+.div-prin p {
+    font-family:"caviar"; 
+    color: white;
+    font-size: 3vh;
+}
